syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "DeleteKey";

package com.orange.keymanager;

service DeleteKeyService {
    rpc deleteKey (DeleteKeyMessage.DeleteKeyRequest) returns (DeleteKeyMessage.DeleteKeyResponse) {}
}

message DeleteKeyMessage {

    message DeleteKeyRequest {
        string client_id = 1;
        int64 key_id = 2;
    }

    message DeleteKeyResponse {
        int64 deleted_key_id = 1;
    }
}

